<resources>
    <string name="app_name">BlocoNotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_excluirTodos">Excluir Todos</string>
    <string name="titulo_principal">Minhas Anotações</string>
    <string name="botao_salvar">Salvar</string>
    <string name="botao_excluir">Excluir</string>
    <string name="texto_cadastrar">Nova nota</string>
</resources>