<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrincipalFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tituloPrincipal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/titulo_principal"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listaNotas"
        android:layout_width="wrap_content"
        android:layout_height="453dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cadastrar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/botao_cadastrar"
            android:textSize="10dp"/>

        <Space
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
        android:id="@+id/excluirTodos"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_excluirTodos"
        android:textSize="10dp"/>

    </LinearLayout>

</LinearLayout>