<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastrarFragment" >

    <TextView
        android:id="@+id/textoCadastrar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/texto_cadastrar"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/campoTitulo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/campoDescricao"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Space
        android:layout_width="55dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/salvar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_salvar" />

    <Space
       android:layout_width="100dp"
       android:layout_height="50dp" />

    <Button
        android:id="@+id/excluir"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_excluir" />
    </LinearLayout>

</LinearLayout>